--- a/UMC6thAssignment/Base.lproj/Main.storyboard
+++ b/UMC6thAssignment/Base.lproj/Main.storyboard
@@ -19,8 +19,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W1L-8w-Xad">
                                 <rect key="frame" x="0.0" y="59" width="393" height="200"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="현재 시각" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3eb-h0-Lf6">
-                                        <rect key="frame" x="123" y="50" width="147" height="48"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알람 시작 시간" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3eb-h0-Lf6">
+                                        <rect key="frame" x="84" y="50" width="225" height="48"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -31,12 +31,6 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RM7-6p-BAL">
-                                        <rect key="frame" x="331.66666666666669" y="20" width="41.333333333333314" height="20.333333333333329"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
@@ -44,9 +38,7 @@
                                     <constraint firstAttribute="height" constant="200" id="RTt-ck-9j6"/>
                                     <constraint firstItem="m4d-hq-aGA" firstAttribute="centerX" secondItem="W1L-8w-Xad" secondAttribute="centerX" id="WNO-C5-XqM"/>
                                     <constraint firstItem="3eb-h0-Lf6" firstAttribute="centerX" secondItem="W1L-8w-Xad" secondAttribute="centerX" id="WqS-SG-3kh"/>
-                                    <constraint firstItem="RM7-6p-BAL" firstAttribute="top" secondItem="W1L-8w-Xad" secondAttribute="top" constant="20" id="e6d-KC-wGM"/>
                                     <constraint firstItem="m4d-hq-aGA" firstAttribute="top" secondItem="3eb-h0-Lf6" secondAttribute="bottom" constant="20" id="oSj-Tl-UaX"/>
-                                    <constraint firstAttribute="trailing" secondItem="RM7-6p-BAL" secondAttribute="trailing" constant="20" id="ros-lg-khr"/>
                                 </constraints>
                             </view>
                             <datePicker contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="fill" datePickerMode="countDownTimer" minuteInterval="1" style="wheels" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RKp-uV-sII">
@@ -66,7 +58,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gvj-0H-Bbo">
                                 <rect key="frame" x="0.0" y="443.33333333333326" width="393" height="300"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="H시간 M분 S초 후에 알람이 울립니다" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T6s-Z5-7By">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알람을 설정해주세요" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T6s-Z5-7By">
                                         <rect key="frame" x="10" y="10" width="373" height="149"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                         <nil key="textColor"/>
@@ -160,10 +152,10 @@
                     </view>
                     <connections>
                         <outlet property="hourLeft" destination="ESQ-Su-fwh" id="wjW-hk-rkS"/>
+                        <outlet property="mainLabel" destination="T6s-Z5-7By" id="BhR-E0-tIi"/>
                         <outlet property="minuteLeft" destination="26t-P5-dmf" id="XI3-Ty-64s"/>
                         <outlet property="nowData" destination="m4d-hq-aGA" id="d9E-eA-H0v"/>
                         <outlet property="secondLeft" destination="NEL-u4-JEB" id="fw3-Nd-zgS"/>
-                        <outlet property="testLabel" destination="RM7-6p-BAL" id="oC0-Lo-WsL"/>
                         <outlet property="timePicker" destination="RKp-uV-sII" id="SpV-mX-y1G"/>
                     </connections>
                 </viewController>
