--- a/UMC6thAssignment/Base.lproj/Main.storyboard
+++ b/UMC6thAssignment/Base.lproj/Main.storyboard
@@ -133,6 +133,12 @@
                                     <constraint firstAttribute="height" constant="300" id="uM6-VT-Cup"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sq5-BN-V86">
+                                <rect key="frame" x="10" y="793.66666666666663" width="373" height="14.333333333333371"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -143,8 +149,11 @@
                             <constraint firstItem="RKp-uV-sII" firstAttribute="top" secondItem="W1L-8w-Xad" secondAttribute="bottom" constant="20" id="4LC-5Q-Elu"/>
                             <constraint firstItem="gvj-0H-Bbo" firstAttribute="top" secondItem="bD1-Pk-tNC" secondAttribute="bottom" constant="20" id="57i-Yo-Ouq"/>
                             <constraint firstItem="RKp-uV-sII" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="50" id="8l3-Bd-mQq"/>
+                            <constraint firstItem="sq5-BN-V86" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="8se-gM-qQU"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="sq5-BN-V86" secondAttribute="bottom" constant="10" id="CP3-aa-nej"/>
                             <constraint firstItem="W1L-8w-Xad" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="J10-lI-VqL"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="W1L-8w-Xad" secondAttribute="trailing" id="Spu-Wr-k7M"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sq5-BN-V86" secondAttribute="trailing" constant="10" id="V4F-f4-V9N"/>
                             <constraint firstItem="W1L-8w-Xad" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bO5-1T-7Js"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gvj-0H-Bbo" secondAttribute="trailing" id="bPt-18-CKw"/>
                             <constraint firstItem="bD1-Pk-tNC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vlq-rx-3AZ"/>
@@ -156,6 +165,7 @@
                         <outlet property="minuteLeft" destination="26t-P5-dmf" id="XI3-Ty-64s"/>
                         <outlet property="nowData" destination="m4d-hq-aGA" id="d9E-eA-H0v"/>
                         <outlet property="secondLeft" destination="NEL-u4-JEB" id="fw3-Nd-zgS"/>
+                        <outlet property="testLabel" destination="sq5-BN-V86" id="8r1-Pi-bHi"/>
                         <outlet property="timePicker" destination="RKp-uV-sII" id="SpV-mX-y1G"/>
                     </connections>
                 </viewController>
